<resources>
    <string name="app_name">BoatRout</string>
    <string name="title_activity_maps">BoatRoute</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="user_name">Usuário</string>
    <string name="boat_name">Nome do Barco</string>
    <string name="velocity_boat">Velocidade do barco</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="selecionar_rota">Selecione sua rota</string>
</resources>
