<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".UserActivity"
    tools:layout_editor_absoluteY="56dp">


    <ImageButton
        android:id="@+id/buttonImageUser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_background_confirmar_green"
        android:backgroundTint="#979797"
        android:src="@drawable/ic_user"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/user_name"
        android:textColor="#172549"
        android:textSize="46dp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="152dp" />

    <EditText
        android:id="@+id/editTextBoatName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/boat_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="248dp" />

    <EditText
        android:id="@+id/editTextVelocityBoat"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/velocity_boat"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="310dp" />

    <ImageButton
        android:id="@+id/buttonOk"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_background_confirmar_green"
        android:src="@drawable/ic_check"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="411dp" />

</android.support.constraint.ConstraintLayout>